# wvw-insights

./: Cargo.toml  README.md  build.rs  common.rs  lib.rs  resources.rc  settings.rs  upload.rs
src/: arcdps.rs  cleanup.rs  common.rs  formatting.rs  lib.rs  logfile.rs  qol.rs  report_history.rs  scanning.rs  settings.rs  state.rs  tokens.rs  upload.rs  upload_review.rs  uploaded_logs.rs  webhooks.rs
src/ui/: log_selection.rs  mod.rs  results.rs  token_input.rs  upload_progress.rs
src/ui/settings/: cleanup.rs  general.rs  history.rs  mod.rs  qol.rs  tokens.rs  webhooks.rs
