[package]
name = "wvw_insights"
version = "1.1.0"
edition = "2021"
authors = ["Retherichus"]
description = "Upload WvW logs for analysis on WvW Insights."

[lib]
crate-type = ["cdylib"]
name = "wvw_insights"


[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.40", features = ["clock"] }
dirs-next = "2.0.0"
log = "0.4.22"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.128"
ureq = { version = "2.12.1", features = ["json"] }
ureq_multipart = "1.1.1"
flate2 = "1.0"

[dependencies.windows]
version = "0.60.0"
features = ["Win32_System_Threading", "Win32_UI_Shell_Common"]

[dependencies.nexus]
git = "https://github.com/Zerthox/nexus-rs"
features = ["log", "log_filter"]

[dependencies.winapi]
version = "0.3"
features = ["libloaderapi", "minwindef", "shellapi", "winuser"]



[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1